---
source: crates/sui-prover/tests/integration.rs
assertion_line: 276
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/map_range.fail.move:24:5
   │
24 │     ensures(map_range!<u64, u64>(&v, 0, 1, |x| x_plus_10(x)) == vector[30]); // FAIL: should be [20]
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/map_range.fail.move:21: test_map_range_wrong_result

error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/map_range.fail.move:33:5
   │
33 │     ensures(map_range!<u64, u64>(&v, 1, 3, |x| x_plus_10(x)) == vector[20, 40]); // FAIL: should be [30, 20]
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/map_range.fail.move:29: test_map_range_wrong_subrange



== Generated Boogie Code ==
function {:inline} $42_quantifiers_map_range_fail_x_plus_10$pure(_$t0: int) returns ($ret0: int)
{
    (var $t2 := 18446744073709551605;
    (var $t3 := (_$t0 < $t2);
    (var $t4 := 10;
    (var $t5 := (_$t0 + $t4);
    (var $t6 := 18446744073709551615;
    (var $t7 := $t6;
    (var $t8 := (if $t3 then $t5 else $t7);
    $t8)))))))
}
